# repo.wonntext

./: .copier-answers.python.yml  .env.example  .envrc  .gitignore  AGENT.md  README.md  flake.nix  justfile  pyproject.toml  setup.sh  uv.toml
.github/workflows/: build-image.yml
assets/weights/: transformer_arithmetic_metrics.json  wonntext_arithmetic_metrics.json
assets/wikitext/: metadata.json  tokenizer.json
data/: sample.txt
data/arithmetic/: metadata.json
experiments/: math_3x3.json
nix/devshell.d/: python.nix
paper/: main.typ
scripts/: benchmark_winfree_modes.py  make_experiments.py  prepare_arithmetic.py  prepare_arithmetic_curriculum.py  prepare_math.py  prepare_wikitext.py  ray_runner.py
sky/: Dockerfile.wonntext  requirements-runtime.txt  runpod_ablation_causal.yaml  runpod_ablation_omega.yaml  runpod_arithmetic_curriculum_transformer.yaml  runpod_arithmetic_curriculum_transformer_10x.yaml  runpod_arithmetic_curriculum_wonn.yaml  runpod_arithmetic_curriculum_wonn_10x.yaml  runpod_arithmetic_transformer.yaml  runpod_arithmetic_wonn.yaml  runpod_baseline.yaml  runpod_curriculum_transformer_6L.yaml  runpod_curriculum_universal.yaml  runpod_curriculum_wonn_t8.yaml  runpod_wikitext.yaml  runpod_wikitext_transformer_10x.yaml  runpod_wikitext_wonn_10x.yaml  smoke.yaml
src/wonntext/: __init__.py  baseline_transformer.py  data.py  hier_model.py  layers.py  math_data.py  model.py  muon.py  train.py  train_arithmetic.py  train_math.py  utils.py  winfree.py  winfree_hier.py
tests/: test_model.py
