[project]
name = "wonntext"
version = "0.1.0"
description = "A denoising masked-language WONN built on the Sudoku configuration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "tqdm>=4.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wonntext"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "ty",
]
data = [
    "datasets>=2.14",
    "tokenizers>=0.19",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN", "PTH"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.ty.src]
include = ["src", "tests"]
